--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -39,7 +39,15 @@ add_subdirectory(ex-cxx-overhead)
 get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
 find_package(CUDA QUIET)
 if("CUDA" IN_LIST LANGUAGES AND CUDA_FOUND)
-    add_subdirectory(ex-cuda-event)
+    if(NOT DEFINED TIMEMORY_USE_CUDA OR TIMEMORY_USE_CUDA)
+        if(TIMEMORY_USE_MPI)
+            set(_msg "TIMEMORY_USE_MPI=ON might cause -pthread flag to be")
+            set(_msg "${_msg} passed to CUDA compiler (resulting in compiler error)")
+            message(WARNING "\n${_msg}")
+            unset(_msg)
+        endif()
+        add_subdirectory(ex-cuda-event)
+    endif()
 endif()
 
 #add_subdirectory(ex-cxx-graph)
