--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -116,10 +116,10 @@ else() # build tree
 
 endif()
 
-set(@PROJECT_NAME@_INCLUDE_DIRS SYSTEM ${@PROJECT_NAME@_INCLUDE_DIR})
+set(@PROJECT_NAME@_INCLUDE_DIRS ${@PROJECT_NAME@_INCLUDE_DIR})
 set(@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS "@EXTERNAL_INCLUDE_DIRS@")
 foreach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
-    list(APPEND @PROJECT_NAME@_INCLUDE_DIRS SYSTEM ${_DIR})
+    list(APPEND @PROJECT_NAME@_INCLUDE_DIRS ${_DIR})
 endforeach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
 
 
