--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -12,13 +12,18 @@ find_package(TiMemory REQUIRED)
 
 add_executable(${EXE_NAME} ${EXE_NAME}.c)
 target_link_libraries(${EXE_NAME}
-    PUBLIC ${TiMemory_LIBRARIES} ${TiMemory_C_LIBRARIES} ${EXTERNAL_LIBRARIES})
+    PRIVATE ${TiMemory_LIBRARIES} ${TiMemory_C_LIBRARIES})
+
 target_include_directories(${EXE_NAME} SYSTEM
-    PUBLIC ${TiMemory_INCLUDE_DIRS})
+    PRIVATE ${TiMemory_INCLUDE_DIRS})
+
 target_compile_options(${EXE_NAME}
-    PUBLIC ${TiMemory_C_COMPILE_OPTIONS})
+    PRIVATE ${TiMemory_C_COMPILE_OPTIONS})
+
 set_target_properties(${EXE_NAME} PROPERTIES
     CXX_STANDARD 11
+    LANGUAGE C
+    LINKER_LANGUAGE CXX
     CXX_STANDARD_REQUIRED ON)
 
 if(DEFINED PROJECT_DEPENDS)
