--- a/examples/ex-cuda-event/CMakeLists.txt
+++ b/examples/ex-cuda-event/CMakeLists.txt
@@ -18,9 +18,9 @@ target_include_directories(${EXE_NAME} SYSTEM PRIVATE
     ${TiMemory_INCLUDE_DIRS})
 
 target_compile_options(${EXE_NAME} PRIVATE
-    $<$<COMPILE_LANGUAGE:C>:${TiMemory_C_FLAGS} ${${PROJECT_NAME}_C_FLAGS}>
-    $<$<COMPILE_LANGUAGE:CXX>:${TiMemory_CXX_FLAGS} ${${PROJECT_NAME}_CXX_FLAGS}>
-    $<$<COMPILE_LANGUAGE:CUDA>:${TiMemory_CUDA_FLAGS} ${${PROJECT_NAME}_CUDA_FLAGS}>)
+    $<$<COMPILE_LANGUAGE:C>:${TiMemory_C_COMPILE_OPTIONS} ${${PROJECT_NAME}_C_FLAGS}>
+    $<$<COMPILE_LANGUAGE:CXX>:${TiMemory_CXX_COMPILE_OPTIONS} ${${PROJECT_NAME}_CXX_FLAGS}>
+    $<$<COMPILE_LANGUAGE:CUDA>:${TiMemory_CUDA_COMPILE_OPTIONS} ${${PROJECT_NAME}_CUDA_FLAGS}>)
 
 set_target_properties(${EXE_NAME} PROPERTIES
     CXX_STANDARD 11
