--- a/examples/ex-cxx-overhead/CMakeLists.txt
+++ b/examples/ex-cxx-overhead/CMakeLists.txt
@@ -11,15 +11,24 @@ set(EXE_NAME test_cxx_overhead)
 find_package(TiMemory REQUIRED)
 
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
+
 target_link_libraries(${EXE_NAME}
     PUBLIC ${TiMemory_LIBRARIES} ${EXTERNAL_LIBRARIES})
+
 target_include_directories(${EXE_NAME} SYSTEM
     PUBLIC ${TiMemory_INCLUDE_DIRS})
-target_compile_options(${EXE_NAME}
-    PUBLIC ${TiMemory_CXX_COMPILE_OPTIONS})
+
+target_compile_options(${EXE_NAME} PRIVATE
+    $<$<COMPILE_LANGUAGE:C>:${TiMemory_C_COMPILE_OPTIONS} ${${PROJECT_NAME}_C_FLAGS}>
+    $<$<COMPILE_LANGUAGE:CXX>:${TiMemory_CXX_COMPILE_OPTIONS} ${${PROJECT_NAME}_CXX_FLAGS}>)
+
 set_target_properties(${EXE_NAME} PROPERTIES
     CXX_STANDARD 11
     CXX_STANDARD_REQUIRED ON)
+
+foreach(_OPT ${TiMemory_CXX_LINK_OPTIONS})
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${_OPT}")
+endforeach()
 
 if(DEFINED PROJECT_DEPENDS)
     add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
