Xcode fixes + gperf + significant performance improvement

--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(TiMemory REQUIRED)
 find_package(Threads REQUIRED)
 
 if(WIN32)
-	list(APPEND ${PROJECT_NAME}_CXX_FLAGS /bigobj)
+    list(APPEND ${PROJECT_NAME}_CXX_FLAGS /bigobj)
+else()
+    list(APPEND TiMemory_CXX_LINK_OPTIONS -lpthread)
 endif()
 
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
