Formatting + /bigobj for Windows + clang-tidy fixes for Python

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -5,6 +5,8 @@
 #
 ################################################################################
 
+unset(CMAKE_CXX_CLANG_TIDY)
+
 set(PYLIBNAME lib${LIBNAME})
 
 execute_process(COMMAND ${PYTHON_EXECUTABLE}
