--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -13,12 +13,7 @@ find_package(TiMemory REQUIRED)
 add_executable(${EXE_NAME} ${EXE_NAME}.c)
 
 target_link_libraries(${EXE_NAME}
-    PRIVATE timemory-c-library)
-
-if(WIN32)
-    target_link_libraries(${EXE_NAME}
-        PRIVATE timemory-cxx-library)
-endif()
+    PRIVATE timemory-c-library-static)
 
 target_include_directories(${EXE_NAME} SYSTEM
     PRIVATE ${TiMemory_INCLUDE_DIRS})
@@ -31,13 +26,8 @@ set_target_properties(${EXE_NAME} PROPERTIES
     C_STANDARD 11
     C_STANDARD_REQUIRED ON)
 
-if(WIN32)
-    set_target_properties(${EXE_NAME} PROPERTIES
-        LINKER_LANGUAGE CXX)
-endif()
-
 if(DEFINED PROJECT_DEPENDS)
-    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS} timemory-c-library)
+    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
 endif(DEFINED PROJECT_DEPENDS)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
