Fixes to CUPTI execution (no exit) + successful testing + fixes to signal_detection and delimit

--- a/examples/ex-cuda-event/CMakeLists.txt
+++ b/examples/ex-cuda-event/CMakeLists.txt
@@ -30,9 +30,9 @@ set_target_properties(${EXE_NAME} PROPERTIES
     CUDA_RESOLVE_DEVICE_SYMBOLS ON
     CUDA_SEPARABLE_COMPILATION ON)
 
-if(DEFINED PROJECT_DEPENDS)
-    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
-endif()
+#if(DEFINED PROJECT_DEPENDS)
+#    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
+#endif()
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
