--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -38,9 +38,9 @@ foreach(_OPT ${TiMemory_CXX_LINK_OPTIONS})
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${_OPT}")
 endforeach()
 
-if(DEFINED PROJECT_DEPENDS)
-    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
-endif(DEFINED PROJECT_DEPENDS)
+#if(DEFINED PROJECT_DEPENDS)
+#    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
+#endif(DEFINED PROJECT_DEPENDS)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
