--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -26,9 +26,9 @@ set_target_properties(${EXE_NAME} PROPERTIES
     C_STANDARD 11
     C_STANDARD_REQUIRED ON)
 
-if(DEFINED PROJECT_DEPENDS)
-    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
-endif(DEFINED PROJECT_DEPENDS)
+#if(DEFINED PROJECT_DEPENDS)
+#    add_dependencies(${EXE_NAME} ${PROJECT_DEPENDS})
+#endif(DEFINED PROJECT_DEPENDS)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
