--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -41,11 +41,11 @@ target_compile_options(${PYLIBNAME}
 
 get_target_property(PYTARGET_INCLUDE_DIRS ${PYLIBNAME} INCLUDE_DIRECTORIES)
 
+target_include_directories(${PYLIBNAME} SYSTEM BEFORE
+    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/pybind11/include)
+
 target_include_directories(${PYLIBNAME} PUBLIC
     ${PYTARGET_INCLUDE_DIRS} ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
-
-target_include_directories(${PYLIBNAME} SYSTEM
-    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/pybind11/include)
 
 add_dependencies(${PYLIBNAME} ${LIBNAME}-c-library ${LIBNAME}-cxx-library)
 
