--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,17 +1,18 @@
 
 include(CMakeParseArguments)
 
-
 #----------------------------------------------------------------------------------------#
 # Locate sources and headers for this project
 # - headers are included so they will show up in IDEs
 #
-file(GLOB c_headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.h)
-file(GLOB c_sources ctimemory.c)
-file(GLOB cxx_headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.hpp)
-file(GLOB cxx_headers_impl ${CMAKE_CURRENT_LIST_DIR}/timemory/impl/*.icpp)
-file(GLOB cxx_sources ctimemory.cpp)
-file(GLOB_RECURSE cereal_headers ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hpp)
+file(GLOB c_headers                 ${CMAKE_CURRENT_LIST_DIR}/timemory/*.h)
+file(GLOB c_sources                 ${CMAKE_CURRENT_LIST_DIR}/ctimemory.c)
+file(GLOB cxx_headers               ${CMAKE_CURRENT_LIST_DIR}/timemory/*.hpp)
+file(GLOB cxx_headers_impl          ${CMAKE_CURRENT_LIST_DIR}/timemory/impl/*.icpp)
+file(GLOB cxx_sources               ${CMAKE_CURRENT_LIST_DIR}/ctimemory.cpp)
+file(GLOB cuda_sources              ${CMAKE_CURRENT_LIST_DIR}/ctimemory.cu)
+file(GLOB_RECURSE cereal_headers    ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hpp)
+
 # this is only needed for windows
 file(GLOB pyheaders ${CMAKE_CURRENT_LIST_DIR}/python/*.hpp)
 file(GLOB pysources ${CMAKE_CURRENT_LIST_DIR}/python/*.cpp)
@@ -28,8 +29,9 @@ add_subdirectory(timemory)
 #
 set(_OUTPUT_DIR ${PROJECT_BINARY_DIR}/timemory/lib)
 # directly compile sources
-set(C_LIBRARY_SOURCES   ${c_sources}   ${c_headers})
-set(CXX_LIBRARY_SOURCES ${cxx_sources} ${cxx_headers} ${cxx_headers_impl} ${cereal_headers})
+set(C_LIBRARY_SOURCES    ${c_sources}    ${c_headers})
+set(CXX_LIBRARY_SOURCES  ${cxx_sources}  ${cxx_headers} ${cxx_headers_impl} ${cereal_headers})
+set(CUDA_LIBRARY_SOURCES ${cuda_sources} )
 
 # if Windows, set _COMPILE_DEFS and possibly _ARCHIVE_SUFFIX
 if(WIN32)
@@ -47,6 +49,26 @@ elseif(XCODE)
     set(_OUTPUT_DIR ${PROJECT_BINARY_DIR})
 endif()
 
+
+#------------------------------------------------------------------------------#
+# build the CUDA library
+#
+if(TIMEMORY_USE_CUDA AND TIMEMORY_USE_CUPTI)
+    build_library(
+        PIC
+        TYPE                STATIC
+        TARGET_NAME         ${LIBNAME}-cuda-library
+        OUTPUT_NAME         cu${LIBNAME}
+        LANGUAGE            CUDA
+        LINKER_LANGUAGE     CUDA
+        OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
+        COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
+        SOURCES             ${CUDA_LIBRARY_SOURCES}
+        LINK_LIBRARIES      ${EXTERNAL_LIBRARIES}
+        INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+
+    list(APPEND EXTERNAL_LIBRARIES ${LIBNAME}-cuda-library)
+endif()
 
 
 #----------------------------------------------------------------------------------------#
