--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -22,7 +22,9 @@ add_executable(${TIMEM_NAME} timem.cpp)
 target_link_libraries(${TIMEM_NAME} ${LIBNAME}-cxx-library-static timemory-headers)
 target_compile_definitions(${TIMEM_NAME} PRIVATE ${${PROJECT_NAME}_DEFINITIONS})
 target_compile_options(${TIMEM_NAME} PRIVATE ${${PROJECT_NAME}_CXX_FLAGS})
+target_compile_definitions(${TIMEM_NAME} PRIVATE ${${PROJECT_NAME}_DEFINITIONS})
 target_include_directories(${TIMEM_NAME} PRIVATE ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+target_include_directories(${TIMEM_NAME} SYSTEM PRIVATE ${${PROJECT_NAME}_SYSTEM_INCLUDE_DIRS})
 
 # timem installation
 install(TARGETS ${TIMEM_NAME}
